syntax = "proto2";

package rv.protos;

import "google/protobuf/struct.proto";

message AnalyzerConfig {
    required string analyzer_type = 1;

    // Configuration for StatsAnalyzer
    // File with stats generated by compute_stats command. Used to
    // convert non-uint8 raster values to uint8.
    message StatsAnalyzerConfig {
        required string stats_uri = 1;
        optional float sample_prob = 2;
    }

    oneof raster_transformer_config {
        StatsAnalyzerConfig stats_analyzer_config = 4;

        // for backward compatibility
        string stats_uri = 5;

        // Configuration for custom transformers
        google.protobuf.Struct custom_config = 3;
    }
}
